--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -5,10 +5,18 @@
   }
   bottom: calc(-1 * var(--overflow));
   color: #cccccc;
+  cursor: pointer;
+  display: flex;
   left: 50%;
   padding: var(--tile-gap);
   position: absolute;
   top: calc(-1 * var(--overflow));
   transform: translate(-50%);
   width: calc(var(--board-size) + 2 * var(--overflow));
+}
+
+.About > .container {
+  margin: auto;
+  text-align: center;
+  line-height: 1.5;
 }
