--- a/src/components/Game.scss
+++ b/src/components/Game.scss
@@ -9,7 +9,9 @@
     --tile-number-color: #ccc;
 }
 
-.Game {
+.game {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 14px;
     margin: 1rem auto;
     position: relative;
 }
