--- a/src/components/control-panel/ControlPanel.scss
+++ b/src/components/control-panel/ControlPanel.scss
@@ -10,10 +10,24 @@
   user-select: none;
   width: var(--board-size);
 
-  &__undo, &__restart, &__help, &__about {
-    cursor: pointer;
+  &__button {
+    border: 0;
+    color: inherit;
+    font: inherit;
+    padding: 0;
+    margin: 0;
+    background: transparent;
+    line-height: normal;
+    -webkit-font-smoothing: inherit;
+    -moz-osx-font-smoothing: inherit;
+    -webkit-appearance: none;
+
     min-width: 1.5rem;
     text-align: center;
+
+    &_undo {
+      font-family: sans-serif;
+    }
 
     &:hover {
       text-shadow: black 1px 1px 2px;
@@ -22,9 +36,5 @@
     &:active {
       transform: translate(2px, 2px);
     }
-  }
-
-  &__undo {
-    font-family: sans-serif;
   }
 }
