--- a/src/components/control-panel/ControlPanel.scss
+++ b/src/components/control-panel/ControlPanel.scss
@@ -1,6 +1,6 @@
 .control-panel {
   align-items: center;
-  background-image: url('/assests/img/xv.png');
+  background-image: url('/assests/img/xv.webp');
   border-radius: var(--board-radius);
   box-shadow: #333 2px 2px 5px;
   display: grid;
